# leftcursor

./: .gitignore  .gitmodules  Cargo.toml
resource/left-win10-aero-cursors/: aero_arrow.cur  aero_arrow_l_2.cur  aero_arrow_xl_3.cur  aero_busy.ani  aero_busy_l_2.ani  aero_busy_xl_3.ani  aero_ew.cur  aero_helpsel.cur  aero_helpsel_l_2.cur  aero_helpsel_xl_3.cur  aero_link_l_5.cur  aero_link_xl_6.cur  aero_move.cur  aero_nesw.cur  aero_ns.cur  aero_nwse.cur  aero_pen_l_2.cur  aero_pen_xl_3.cur  aero_person.cur  aero_person_l.cur  aero_person_xl.cur  aero_pin.cur  aero_pin_l.cur  aero_pin_xl.cur  aero_unavail.cur  aero_unavail_l_2.cur  aero_unavail_xl_3.cur  aero_up.cur  aero_working.ani  aero_working_l_2.ani  aero_working_xl_3.ani  left-handed-mouse-pointers.crs  readme.txt
src/: ani.rs  cursor.rs  lib.rs  macros.rs  main.rs
